--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             },
             {
               data: 'citation',
-              title: 'Citation Counts',
+              title: 'Citation',
               defaultContent: '',
               render: (data, type, row) => {
                 if (type === 'display') {
