--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>EquiCite | HBCU Research Repository</title>
 
-  <!-- Bootstrap 5 CSS -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
-  <!-- DataTables Bootstrap 5 theme CSS -->
-  <link rel="stylesheet" href="https://cdn.datatables.net/2.0.7/css/dataTables.bootstrap5.min.css">
+<!-- Local CSS -->
+<link rel="stylesheet" href="css/bootstrap.min.css">
+<link rel="stylesheet" href="css/dataTables.bootstrap5.min.css">
+<link rel="stylesheet" href="css/custom.css">
+
+<!-- Local JS -->
+<script src="js/jquery-3.7.1.min.js"></script>
+<script src="js/dataTables.min.js"></script>
+<script src="js/dataTables.bootstrap5.min.js"></script>
+<script src="js/bootstrap.bundle.min.js"></script>
 
   <style>
     body { padding: 20px; }
