--- a/index.html
+++ b/index.html
@@ -33,10 +33,45 @@
 </head>
 <body>
   <!-- Logo -->
-  <center><img src="img\equicite logo png.png" alt="EquiCite" style="max-height:104px"></center>
+<div style="display: flex; align-items: center; gap: 30px; padding: 15px 40px; background-color: #ffffff; box-shadow: 0 2px 6px rgba(0,0,0,0.1); border-radius: 12px;">
 
-  <h1 style="text-align: center;">Open Access Research Repository</h1>
-  <h2 style="text-align: center;">Historically Black Colleges and Universities (HBCUs)</h2>
+  <img src="img/equicite logo png.png" alt="EquiCite" style="max-height: 80px;">
+
+  <nav style="display: flex; gap: 12px; font-size: 17px;">
+    <a href="https://www.equicite.org/" target="_blank"
+       style="padding: 8px 16px; background-color: #0066cc; color: white; border-radius: 20px; text-decoration: none; transition: 0.3s;">
+       Home
+    </a>
+    <a href="https://www.equicite.org/about-the-data" target="_blank"
+       style="padding: 8px 16px; background-color: #e5f1ff; color: #0066cc; border-radius: 20px; text-decoration: none; transition: 0.3s;">
+       About the Data
+    </a>
+    <a href="https://www.equicite.org/about" target="_blank"
+       style="padding: 8px 16px; background-color: #f3f3f3; color: #333; border-radius: 20px; text-decoration: none; transition: 0.3s;">
+       About Us
+    </a>
+    <a href="https://www.equicite.org/contact-2" target="_blank"
+       style="padding: 8px 16px; background-color: #ffe9ec; color: #cc0033; border-radius: 20px; text-decoration: none; transition: 0.3s;">
+       Contact
+    </a>
+  </nav>
+</div>
+
+<style>
+  nav a:hover {
+    opacity: 0.8;
+    transform: translateY(-2px);
+  }
+</style>
+
+
+<h1 style="text-align: center; font-size: 2.4rem; font-weight: 700; color: #003366; margin-bottom: 0.5em;">
+  The EquiCite Research Repository
+</h1>
+<h2 style="text-align: center; font-size: 1.5rem; font-weight: 400; color: #444;">
+  Open Access Scholarship from Historically Black Colleges & Universities
+</h2>
+
   
 
   <!-- Filters -->
@@ -120,7 +155,7 @@
             },
             {
               data: 'citation',
-              title: 'Citation',
+              title: 'MLA Citation',
               defaultContent: '',
               render: (data, type, row) => {
                 if (type === 'display') {
