adding backend and updated header title

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
 
 <h1 style="text-align: center; font-size: 2.4rem; font-weight: 700; color: #003366; margin-bottom: 0.5em;">
-  The EquiCite Research Repository
+  The HBCU Research Repository
 </h1>
 <h2 style="text-align: center; font-size: 1.5rem; font-weight: 400; color: #444;">
   Open Access Scholarship from Historically Black Colleges & Universities
