--- a/index.html
+++ b/index.html
@@ -70,6 +70,8 @@
           <li class="nav-item"><a class="nav-link" href="https://www.equicite.org/about-the-data" target="_blank" rel="noopener">About the Data</a></li>
           <li class="nav-item"><a class="nav-link" href="https://www.equicite.org/about" target="_blank" rel="noopener">About Us</a></li>
           <li class="nav-item"><a class="nav-link" href="https://www.equicite.org/contact-2" target="_blank" rel="noopener">Contact</a></li>
+          <li class="nav-item"><a class="nav-link" href="roadmap.html">Roadmap</a></li>
+
         </ul>
 
         <div class="d-flex gap-2">
@@ -129,177 +131,45 @@
 </div>
 
 
-  <!-- Scripts: jQuery -> DataTables core -> DataTables Bootstrap skin -> Bootstrap bundle 
-  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-  <script src="https://cdn.datatables.net/2.0.7/js/dataTables.min.js"></script>
-  <script src="https://cdn.datatables.net/2.0.7/js/dataTables.bootstrap5.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>-->
-
-  <!-- App script 
-  <script>
-    const DATA_URL = "data/equicite_mvp_dataset.json"; // <-- make sure this path is correct
-
-    function escapeRegex(s){ return String(s).replace(/[.*+?^${}()|[\]\\]/g,'\\$&'); }
-    function uniqueValues(rows, field, numeric=false){
-      const vals = Array.from(new Set(rows.map(r=>r?.[field]).filter(v=>v!==''&&v!=null)));
-      if(numeric){ return vals.map(Number).filter(n=>!Number.isNaN(n)).sort((a,b)=>a-b); }
-      return vals.sort((a,b)=>String(a).localeCompare(String(b)));
-    }
-    function buildMultiSelect(id,labelText,options){
-      const wrap=document.createElement('div'); wrap.className='filter-block';
-      const label=document.createElement('label'); label.htmlFor=id; label.textContent=labelText;
-      const select=document.createElement('select'); select.id=id; select.multiple=true;
-      const ph=document.createElement('option'); ph.textContent='— select one or more —'; ph.disabled=true; select.appendChild(ph);
-      options.forEach(v=>{ const o=document.createElement('option'); o.value=v; o.textContent=v; select.appendChild(o); });
-      wrap.append(label,select); return wrap;
-    }
-
-    (async function(){
-      try{
-        const resp = await fetch(DATA_URL, { cache: "no-store" });
-        if(!resp.ok) throw new Error('Failed to load data: '+resp.status);
-        const rows = await resp.json();
-
-        // DataTables
-        const dt = new DataTable('#myTable', {
-          data: rows,
-          pageLength: 25,
-          deferRender: true,
-          columns: [
-            { data: 'title', title: 'Title', defaultContent: '' },
-            { data: 'publication_year', title: 'Year', defaultContent: '' },
-            { data: 'cited_by_count', title: 'Citation Count', defaultContent: 0 },
-            { data: 'type', title: 'Type', defaultContent: '' },
-            { data: 'primary_topic', title: 'Primary Topic', defaultContent: '' },
-            { data: 'hbcu', title: 'HBCU', defaultContent: '' },
-            {
-              data: 'oa_url',
-              title: 'Open Access',
-              defaultContent: '—',
-              render: (data, type, row) => {
-                if (!data) return '—';
-                const isPdf = /\.pdf(\?|$)/i.test(data);
-                const text  = isPdf ? 'View PDF' : 'Link';
-                // show plain text during filtering to keep regex simple
-                if (type === 'filter') return isPdf ? 'View PDF' : 'Link';
-                return `<a href="${data}" target="_blank" rel="noopener">${text}</a>`;
-              }
-            },
-            {
-              data: 'citation',
-              title: 'MLA Citation',
-              defaultContent: '',
-              render: (data, type, row) => {
-                if (type === 'display') {
-                  const safe = (data || '').replace(/"/g, '&quot;');
-                  return `
-                    <div class="d-flex align-items-center gap-2">
-                      <span class="text-truncate" style="max-width:520px;" title="${safe}">${safe}</span>
-                      <button class="btn btn-sm btn-outline-secondary btn-copy" data-cite="${safe}">Copy</button>
-                    </div>
-                  `;
-                }
-                return data || '';
-              }
-            }
-          ],
-          order: [[1, 'desc'], [2, 'desc']]
-        });
-
-        // Filters config (match your JSON fields)
-        const cfg = [
-          { id:'f_hbcu', label:'HBCU', field:'hbcu', col:5 },
-          { id:'f_type', label:'Type', field:'type', col:3 },
-          { id:'f_year', label:'Year', field:'publication_year', col:1, numeric:true },
-          { id:'f_topic', label:'Primary Topic', field:'primary_topic', col:4 }
-        ];
-
-        // Build filter UI
-        const bar = document.getElementById('filterBar');
-        cfg.forEach(c=>{
-          const options = uniqueValues(rows, c.field, !!c.numeric);
-          const list = c.numeric ? options.map(String).reverse() : options;
-          const block = buildMultiSelect(c.id, c.label, list);
-          bar.appendChild(block);
-
-          block.querySelector('select').addEventListener('change', function(){
-            const selected = Array.from(this.selectedOptions).filter(o=>!o.disabled).map(o=>o.value);
-            if(!selected.length){ dt.column(c.col).search('').draw(); return; }
-            const pattern = `^(${selected.map(escapeRegex).join('|')})$`;
-            dt.column(c.col).search(pattern, true, false).draw();
-          });
-        });
-
-        // Reset filters
-        document.getElementById('clearFilters').addEventListener('click', ()=>{
-          cfg.forEach(c=>{
-            const sel=document.getElementById(c.id);
-            Array.from(sel.options).forEach(o=>o.selected=false);
-            dt.column(c.col).search('');
-          });
-          dt.draw();
-        });
-
-        // Copy citation buttons
-        document.getElementById('myTable').addEventListener('click', async (e)=>{
-          const btn = e.target.closest('.btn-copy');
-          if(!btn) return;
-          try{
-            await navigator.clipboard.writeText(btn.getAttribute('data-cite') || '');
-            btn.textContent = 'Copied!';
-            setTimeout(()=>btn.textContent='Copy', 1200);
-          }catch(err){
-            console.error(err);
-            btn.textContent = 'Error';
-            setTimeout(()=>btn.textContent='Copy', 1200);
-          }
-        });
-
-      }catch(err){
-        console.error(err);
-        alert("Could not load the dataset. Open the browser console for details.");
-      }
-    })();
-  </script>-->
 
 
-<footer class="mt-4">
-  <div class="container">
-    <div class="bg-white shadow-sm p-4" style="border-radius: 16px;">
-      <div class="row g-3">
-        <div class="col-lg-6">
-          <div class="fw-bold">HBCU Research Repository</div>
-          <div class="text-muted small">
-            A searchable repository of HBCU-affiliated scholarship to improve discoverability and citation.
+  <!-- Footer -->
+  <footer class="mt-4">
+    <div class="container">
+      <div class="bg-white shadow-sm p-4" style="border-radius: 16px;">
+        <div class="row g-3">
+          <div class="col-lg-6">
+            <div class="fw-bold">HBCU Research Repository</div>
+            <div class="text-muted small">
+              A searchable repository of HBCU-affiliated scholarship to improve discoverability and citation.
+            </div>
+          </div>
+
+          <div class="col-lg-3">
+            <div class="fw-bold">Links</div>
+            <div class="d-flex flex-column gap-1 small">
+              <a href="index.html">Repository</a>
+              <a href="roadmap.html">Roadmap</a>
+              <a href="https://github.com/EquiCite/MVP" target="_blank" rel="noopener">GitHub</a>
+            </div>
+          </div>
+
+          <div class="col-lg-3">
+            <div class="fw-bold">Founder</div>
+            <div class="d-flex flex-column gap-1 small">
+              <span class="text-muted">Adrianna Seeney</span>
+              <a href="https://www.linkedin.com/in/aseeney" target="_blank" rel="noopener">LinkedIn</a>
+            </div>
           </div>
         </div>
 
-        <div class="col-lg-3">
-          <div class="fw-bold">Links</div>
-          <div class="d-flex flex-column gap-1 small">
-            <a href="https://www.equicite.org/" target="_blank">Website</a>
-            <a href="https://www.equicite.org/about-the-data" target="_blank">About the Data</a>
-            <a href="https://github.com/EquiCite/MVP" target="_blank">GitHub</a>
-          </div>
+        <hr class="my-3" />
+        <div class="text-muted small">
+          © <span id="year"></span> HBCU Research Repository. All rights reserved.
         </div>
-
-        <div class="col-lg-3">
-          <div class="fw-bold">Founder</div>
-          <div class="d-flex flex-column gap-1 small">
-            <span class="text-muted">Adrianna Seeney</span>
-            <a href="https://www.linkedin.com/in/aseeney" target="_blank">LinkedIn</a>
-            
-          </div>
-        </div>
-      </div>
-
-      <hr class="my-3" />
-      <div class="text-muted small">
-        © <span id="year"></span> HBCU Research Repository. All rights reserved.
       </div>
     </div>
-  </div>
-</footer>
+  </footer>
 
 <script>
   document.getElementById("year").textContent = new Date().getFullYear();
