--- a/roadmap.html
+++ b/roadmap.html
@@ -46,11 +46,9 @@
 
         <div class="collapse navbar-collapse" id="eqNav">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0" style="font-size: 16px;">
-            <li class="nav-item"><a class="nav-link" href="https://www.equicite.org/" target="_blank" rel="noopener">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="https://www.equicite.org/about-the-data" target="_blank" rel="noopener">About the Data</a></li>
-            <li class="nav-item"><a class="nav-link" href="https://www.equicite.org/about" target="_blank" rel="noopener">About Us</a></li>
-            <li class="nav-item"><a class="nav-link" href="https://www.equicite.org/contact-2" target="_blank" rel="noopener">Contact</a></li>
-            <li class="nav-item"><a class="nav-link active fw-semibold" href="roadmap.html">Roadmap</a></li>
+            <li class="nav-item"><a class="nav-link" href="index.html">Repository</a></li>
+            <li class="nav-item"><a class="nav-link active fw-semibold" href="about-the-data.html">About the Data</a></li>
+            <li class="nav-item"><a class="nav-link" href="roadmap.html">Roadmap</a></li>
           </ul>
 
           <div class="d-flex gap-2">
