--- a/roadmap.html
+++ b/roadmap.html
@@ -69,7 +69,7 @@
         Public Roadmap
       </h1>
       <p class="mb-0" style="text-align:center; font-size: 1.05rem; color: #555;">
-        What I’m building next for the HBCU Research Repository — shaped by real user feedback.
+        What I’m building next for the HBCU Research Repository
       </p>
       <div class="text-center mt-2">
         <span class="badge text-bg-light border">Last updated: <span id="roadmapUpdated"></span></span>
